WAIT I UNDERSTAND ADVANTAGEKIT WE'RE SO BACK :D

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ java {
     targetCompatibility = javaVersion
 }
 
-def ROBOT_MAIN_CLASS = "org.sert2521.reefscape2025.Main"
+def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
